# ovpn-manager

./: .gitignore  CI-README.md  CLAUDE.md  FSM_IMPLEMENTATION.md  LICENSE  PLANS.md  README.md  TESTING_NOTES.md  build.sh  meson.build
.claude/: settings.local.json
.github/docker/: debian12-build.Dockerfile  debian13-build.Dockerfile
.github/workflows/: build.yml  release.yml
data/: ovpn-manager.desktop
debian-package/DEBIAN/: control  postinst  postrm
src/: main.c  meson.build  tray.c  tray.h
src/dbus/: config_client.c  config_client.h  dbus_manager.c  dbus_manager.h  session_client.c  session_client.h  signal_handlers.c  signal_handlers.h
src/monitoring/: bandwidth_monitor.c  bandwidth_monitor.h  ping_util.c  ping_util.h
src/storage/: config_schema.h  config_storage.c  config_storage.h
src/ui/: dashboard.c  dashboard.h  icons.h  servers_tab.c  servers_tab.h  theme.c  theme.h  widgets.c  widgets.h
src/utils/: connection_fsm.c  connection_fsm.h  file_chooser.c  file_chooser.h  logger.c  logger.h
